# TCP_ServerClient

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: release.yml  test.yml
Client/: CMakeLists.txt
Client/include/: Client.h  Client.tpp  ClientDefines.h  Defines.h  NetworkClient.h  NetworkingDefines.h  TcpClient.h  TlsClient.h
Client/src/: TcpClient.cpp  TlsClient.cpp
Server/: CMakeLists.txt
Server/include/: Defines.h  NetworkListener.h  NetworkListener.tpp  NetworkingDefines.h  Server.h  Server.tpp  ServerDefines.h  TcpServer.h  TlsServer.h
Server/src/: TcpServer.cpp  TlsServer.cpp
example/: CMakeLists.txt  CreateCerts.sh  client.cpp  server.cpp
hooks/: ApplyHooks.sh  post-checkout  post-merge
src/: TcpClient.h  TcpClient.hpp  TcpServer.h  TcpServer.hpp  TlsClient.h  TlsClient.hpp  TlsServer.h  TlsServer.hpp
src/basic/: TcpClient.hpp  TcpServer.hpp  algorithms.hpp
src/basic/template/: Client.hpp  Server.hpp  exception.hpp
src/ftp/: CMakeLists.txt  FtpServer.cpp  FtpServer.hpp  ftp-simple.pcapng  test.cpp
src/general/client/: Client.h  ClientDefines.h
src/general/server/: Server.h  Server.tpp  ServerDefines.h
src/tcp/client/: TcpClient.cpp  TcpClient.h
src/tcp/server/: TcpServer.cpp  TcpServer.h
src/template/: Client.h  Client.hpp  Server.h  Server.hpp  exception.hpp
src/tls/client/: TlsClient.cpp  TlsClient.h
src/tls/server/: TlsServer.cpp  TlsServer.h
test/: .gitignore  TlsCreateCertFiles.sh  TlsCreateCertFiles_ec.sh  TlsCreateCertFiles_rsa.sh
test/gtest/: .gitignore  CMakeLists.txt  RunAllTests.sh  RunFilteredTests.sh
test/gtest/include/: TestDefines.h
test/gtest/include/api/: HelperFunctions.h  TcpClientApi.h  TcpServerApi.h  TlsClientApi.h  TlsServerApi.h
test/gtest/include/continuous/: TcpClient_Test_Send.h  TcpConnection_Test_MsgTransfer.h  TcpServer_Test_ManyClients.h  TcpServer_Test_Send.h  TlsClient_Test_Send.h  TlsConnection_Test_MsgTransfer.h  TlsServer_Test_ManyClients.h  TlsServer_Test_Send.h
test/gtest/include/forwarding/: TcpClient_Test_Send.h  TcpConnection_Test_MsgTransfer.h  TcpServer_Test_ManyClients.h  TcpServer_Test_Send.h  TlsClient_Test_Send.h  TlsConnection_Test_MsgTransfer.h  TlsServer_Test_ManyClients.h  TlsServer_Test_Send.h
test/gtest/include/fragmentation/: TcpClient_Test_Send.h  TcpConnection_Test_MsgAppend.h  TcpConnection_Test_MsgTransfer.h  TcpServer_Test_ManyClients.h  TcpServer_Test_Send.h  TlsClient_Test_Send.h  TlsConnection_Test_MsgAppend.h  TlsConnection_Test_MsgTransfer.h  TlsServer_Test_ManyClients.h  TlsServer_Test_Send.h
test/gtest/include/general/: TcpClient_Test_Start.h  TcpServer_Test_ReadClientData.h  TcpServer_Test_Start.h  TlsClient_Test_ReadServerData.h  TlsClient_Test_Start.h  TlsConnection_Test_Connect.h  TlsConnection_Test_IncompleteCert.h  TlsServer_Test_ReadClientData.h  TlsServer_Test_Start.h
test/gtest/src/: main.cpp
test/gtest/src/api/: HelperFunctions.cpp  TcpClientApi.cpp  TcpServerApi.cpp  TlsClientApi.cpp  TlsServerApi.cpp
test/gtest/src/continuous/: TcpClient_Test_Send.cpp  TcpConnection_Test_MsgTransfer.cpp  TcpServer_Test_ManyClients.cpp  TcpServer_Test_Send.cpp  TlsClient_Test_Send.cpp  TlsConnection_Test_MsgTransfer.cpp  TlsServer_Test_ManyClients.cpp  TlsServer_Test_Send.cpp
test/gtest/src/forwarding/: TcpClient_Test_Send.cpp  TcpConnection_Test_MsgTransfer.cpp  TcpServer_Test_ManyClients.cpp  TcpServer_Test_Send.cpp  TlsClient_Test_Send.cpp  TlsConnection_Test_MsgTransfer.cpp  TlsServer_Test_ManyClients.cpp  TlsServer_Test_Send.cpp
test/gtest/src/fragmentation/: TcpClient_Test_Send.cpp  TcpConnection_Test_MsgAppend.cpp  TcpConnection_Test_MsgTransfer.cpp  TcpServer_Test_ManyClients.cpp  TcpServer_Test_Send.cpp  TlsClient_Test_Send.cpp  TlsConnection_Test_MsgAppend.cpp  TlsConnection_Test_MsgTransfer.cpp  TlsServer_Test_ManyClients.cpp  TlsServer_Test_Send.cpp
test/gtest/src/general/: TcpClient_Test_Start.cpp  TcpServer_Test_ReadClientData.cpp  TcpServer_Test_Start.cpp  TlsClient_Test_ReadServerData.cpp  TlsClient_Test_Start.cpp  TlsConnection_Test_Connect.cpp  TlsConnection_Test_IncompleteCert.cpp  TlsServer_Test_ReadClientData.cpp  TlsServer_Test_Start.cpp
